--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Openclassroom</title>
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-
+<h1>Un super titre</h1>
 </body>
 </html>
